# klipp

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy-stylus.yml  seed-grants.yml
apps/web/: .env.example  .gitignore  next.config.mjs  package.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/app/api/fund-wallet/: route.ts
apps/web/app/api/profile/upsert/: route.ts
apps/web/app/dashboard/: DashboardClient.tsx  page.tsx
apps/web/app/dashboard/equity/: page.tsx
apps/web/app/dashboard/pro/: page.tsx
apps/web/app/equity/issue/: page.tsx
apps/web/app/onboard/: OnboardClient.tsx  page.tsx
apps/web/components/: CardView.tsx  SignInButton.tsx  VestingProgress.tsx
apps/web/hooks/: useKLIPPCard.ts
apps/web/lib/: chains.ts  contracts.ts  supabase.ts
contracts/solidity/: foundry.toml
contracts/solidity/broadcast/Deploy.s.sol/421614/: run-latest.json
contracts/solidity/broadcast/DeployRobinhood.s.sol/46630/: run-1779903279220.json
contracts/solidity/script/: Deploy.s.sol  DeployRobinhood.s.sol
contracts/solidity/src/: CapTable.sol  EquityToken.sol  MockVesting.sol  ProCard.sol  SoulboundCard.sol
contracts/solidity/test/: CapTable.t.sol  EquityToken.t.sol  ProCard.t.sol  SoulboundCard.t.sol
contracts/stylus/vesting/: Cargo.toml  Dockerfile  rust-toolchain.toml
contracts/stylus/vesting/.cargo/: config.toml
contracts/stylus/vesting/src/: lib.rs  main.rs
deployments/: robinhood-testnet.json  sepolia.json  stylus-sepolia.json
scripts/: package.json  seed-grants.mjs
supabase/: config.toml
supabase/functions/upsert-profile/: index.ts
supabase/migrations/: 0001_initial.sql  0002_funded_wallets.sql
