[package]
name    = "klipp-vesting"
version = "0.1.0"
edition = "2021"
# Pinned MSRV — must match rust-toolchain.toml and the CI RUST_VERSION (1.87.0).
# Combined with the resolver = "3" below, this enables Cargo's MSRV-aware
# dependency resolver, so `cargo generate-lockfile` selects transitive-dep
# versions compatible with 1.87 (e.g. ruint 1.17.x, MSRV 1.85) instead of
# drifting to the latest (ruint 1.18 / alloy 1.8.x) which require rustc 1.90+.
rust-version = "1.87"

# Standalone workspace root so we can opt into resolver v3 (MSRV-aware) on an
# edition-2021 crate. There is no parent Cargo workspace (this lives inside a
# pnpm monorepo), so declaring one here is safe.
[workspace]
resolver = "3"

[lib]
crate-type = ["cdylib", "lib"]

# ── Features ──────────────────────────────────────────────────────────────────
# Default: no features → pure-Rust math only (compiles on any host incl. Windows)
# "contract" feature: pulls in Stylus SDK for wasm32-unknown-unknown compilation
#   Build with: cargo build --features contract --target wasm32-unknown-unknown
#   Or use the GitHub Actions workflow (.github/workflows/deploy-stylus.yml)
#   which runs on Ubuntu where native keccak assembly is available.
[features]
default    = []
export-abi = ["dep:stylus-sdk"]
contract   = ["dep:stylus-sdk", "dep:alloy-primitives", "dep:alloy-sol-types"]

[dependencies]
# stylus-sdk 0.8: requires Linux/macOS for wasm32 build (keccak-asm uses x86_64 assembly)
# Unit tests (cargo test --no-default-features) work on any host — no Stylus deps needed.
stylus-sdk       = { version = "0.8", features = ["export-abi"], optional = true }
alloy-primitives = { version = "0.8", optional = true }
alloy-sol-types  = { version = "0.8", optional = true }

[dev-dependencies]
# No extra deps — tests only exercise compute_vested (pure Rust math)

[profile.release]
codegen-units = 1
strip         = true
lto           = true
panic         = "abort"
opt-level     = "z"
