[package]
name    = "klipp-vesting"
version = "0.1.0"
edition = "2021"
# Pinned MSRV — must match rust-toolchain.toml and the CI RUST_VERSION (1.90.0).
# 1.90 is the floor required by stylus-sdk 0.8.4 (it needs ruint 1.18.0, MSRV
# 1.90). Combined with resolver = "3" below, the MSRV-aware resolver keeps the
# committed Cargo.lock at the SDK's tested combo (ruint 1.18.0, alloy-primitives
# 0.8.26) and prevents future drift past this floor.
rust-version = "1.90"

# Standalone workspace root so we can opt into resolver v3 (MSRV-aware) on an
# edition-2021 crate. There is no parent Cargo workspace (this lives inside a
# pnpm monorepo), so declaring one here is safe.
[workspace]
resolver = "3"

[lib]
crate-type = ["cdylib", "lib"]

# ── Features ──────────────────────────────────────────────────────────────────
# Default: no features → pure-Rust math only (compiles on any host incl. Windows)
# "contract" feature: pulls in Stylus SDK for wasm32-unknown-unknown compilation
#   Build with: cargo build --features contract --target wasm32-unknown-unknown
#   Or use the GitHub Actions workflow (.github/workflows/deploy-stylus.yml)
#   which runs on Ubuntu where native keccak assembly is available.
[features]
default    = []
# export-abi: host-only ABI export build. ONLY this feature may turn on
# stylus-sdk/export-abi — that pulls in std-based ABI generation AND makes
# #[entrypoint] emit a `main()` that prints the ABI instead of the on-chain
# `user_entrypoint`. Enabling it for the wasm `contract` build (as the dependency
# previously did unconditionally) is what caused "missing entrypoint" and the
# no_std "unresolved crate std" errors.
export-abi = ["dep:stylus-sdk", "stylus-sdk/export-abi"]
contract   = ["dep:stylus-sdk", "dep:alloy-primitives", "dep:alloy-sol-types"]

[dependencies]
# stylus-sdk 0.8: requires Linux/macOS for wasm32 build (keccak-asm uses x86_64 assembly)
# Unit tests (cargo test --no-default-features) work on any host — no Stylus deps needed.
# NOTE: do NOT enable export-abi here — it must stay gated behind the crate's own
# export-abi feature (see [features] above), or the wasm contract build breaks.
stylus-sdk       = { version = "0.8", optional = true }
alloy-primitives = { version = "0.8", optional = true }
alloy-sol-types  = { version = "0.8", optional = true }

[dev-dependencies]
# No extra deps — tests only exercise compute_vested (pure Rust math)

[profile.release]
codegen-units = 1
strip         = true
lto           = true
panic         = "abort"
opt-level     = "z"
